--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                <p>Free PSD Web Site Template</p>
             </div>
             <div class="mainBanerImg">
-               <img src="IMG/nature.jpg" alt="header">
+               <img src="IMG/nature.png" alt="header">
             </div>
          </div>
          <nav>
@@ -59,21 +59,21 @@
          <div class="threeBlocks">
             <article>
                <div class="innerBlockFlex">
-                  <div><img class="icon" src="IMG/search-icon.png" alt="img3"></div>
+                  <div><img class="icon" src="IMG/icon.png" alt="img3"></div>
                   <h3>Lorem ipsum dolor</h3>
                </div>
                <p>Aliquam eget vestibulum ante. Duis velit ipsum, rhoncus sed massa nec, dictum aliquet sem. Nunc ut mi interdum, porta justo id, rutrum risus. Mauris pretium justo vitae fermentum fringilla.</p>
             </article>
             <article>
                <div class="innerBlockFlex">
-                  <div><img class="icon" src="IMG/search-icon.png" alt="img2"></div>
+                  <div><img class="icon" src="IMG/icon.png" alt="img2"></div>
                   <h3>Lorem ipsum dolor</h3>
                </div>
                <p>Aliquam eget vestibulum ante. Duis velit ipsum, rhoncus sed massa nec, dictum aliquet sem. Nunc ut mi interdum, porta justo id, rutrum risus. Mauris pretium justo vitae fermentum fringilla.</p>
             </article>
             <article>
                <div class="innerBlockFlex">
-                  <div><img class="icon" src="IMG/search-icon.png" alt="img3"></div>
+                  <div><img class="icon" src="IMG/icon.png" alt="img3"></div>
                   <h3>Lorem ipsum dolor</h3>
                </div>
                <p>Aliquam eget vestibulum ante. Duis velit ipsum, rhoncus sed massa nec, dictum aliquet sem. Nunc ut mi interdum, porta justo id, rutrum risus. Mauris pretium justo vitae fermentum fringilla.</p>
@@ -97,7 +97,7 @@
                   <h3>
                      Vivamuslibero Augue
                   </h3>
-                  <img src="IMG/search-icon.png" class="icon" alt="icon">
+                  <img src="IMG/icon.png" class="icon" alt="icon">
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ultrices lorem in turpis suscipit dictum. Mauris euismod tristique lorem, viverra lobortis sem tempus in. Phasellus facilisis nec orci at vulputate.</p>
                   <a class="moreSmall" href="#">Continue reading</a>
                </div>
@@ -106,7 +106,7 @@
                   <h3>
                      Vivamuslibero Augue
                   </h3>
-                  <img src="IMG/search-icon.png" class="icon" alt="icon">
+                  <img src="IMG/icon.png" class="icon" alt="icon">
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ultrices lorem in turpis suscipit dictum. Mauris euismod tristique lorem, viverra lobortis sem tempus in. Phasellus facilisis nec orci at vulputate.</p>
                   <a class="moreSmall" href="#">Continue reading</a>
                </div>
@@ -136,7 +136,7 @@
             <p>Company name<br>Street name/number<br>Town<br>Post code/ZIP</p>
             <p>Telehopne : XXX XXX XXX XX<br>Fax : XXXXX XXXXXXX<br>Email: email@example.com</p>
          </div>
-         <div><h3>Grab our newssetler</h3><form>
+         <div class="news"><h3>Grab our newssetler</h3><form>
                <input class="newssetler" type="text" placeholder="Name"><br>
                <input class="newssetler" type="email" placeholder="Email"><br>
                <input class="submit" type="submit" value="SUBMIT">
